# opengl

./: .gitmodules  CMakeLists.txt
docs/: function.md  theory.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
helloworld/: CMakeLists.txt  main.cpp
learnopengl/: 4.1.texture.fs  4.1.texture.vs  4.2.texture.fs  CMakeLists.txt  hello_triangle.cpp  hello_triangle_exercise1.cpp  hello_triangle_exercise2.cpp  hello_triangle_exercise3.cpp  rectangle.cpp  shader_s.h  shaders_interpolation.cpp  shaders_uniform.cpp  textures.cpp  textures_combined.cpp
rectangle/: CMakeLists.txt  main.cpp
triangle/: CMakeLists.txt  main.cpp
